--- a/index.html
+++ b/index.html
@@ -12,7 +12,19 @@
   /* Tela inicial hacker */
   #matrix-entry{position:fixed;top:0;left:0;width:100%;height:100%;background:#000;z-index:9999;overflow:hidden;display:flex;justify-content:center;align-items:center;flex-direction:column;font-family:'Courier New',monospace;color:#00ff00;text-align:center;}
   #matrix-canvas{position:absolute;top:0;left:0;width:100%;height:100%;z-index:0;}
-  #matrix-text{position:relative; z-index:1; font-size:1.7rem; margin-bottom:30px;}
+  
+  /* Destaque do texto inicial */
+  #matrix-text{
+    position: relative;
+    z-index: 1;
+    font-size: 1.7rem;
+    margin-bottom: 30px;
+    display: inline-block;
+    background: rgba(0, 0, 0, 0.8); /* caixa preta semi-transparente */
+    padding: 10px 20px; /* espaço interno */
+    border-radius: 8px; /* cantos arredondados */
+  }
+
   #enter-site{position:relative; z-index:1; display:none; padding:15px 40px; font-size:1.3rem; font-weight:bold; border:none; border-radius:12px; background:#00ff00; color:#000; cursor:pointer; transition:0.3s;}
   #enter-site:hover{background:#00aa00; transform:scale(1.05);}
 
@@ -174,8 +186,8 @@
   let fIndex=0,cIndex=0,deleting=false;
   function typeEffect(){
     const txt=frasesHeader[fIndex];
-    if(!deleting){typingElement.textContent=txt.substring(0,cIndex);if(cIndex<txt.length){cIndex++;setTimeout(typeEffect,100);}else{deleting=true;setTimeout(typeEffect,2000);}}
-    else{typingElement.textContent=txt.substring(0,cIndex);if(cIndex>0){cIndex--;setTimeout(typeEffect,50);}else{deleting=false;fIndex=(fIndex+1)%frasesHeader.length;setTimeout(typeEffect,500);}}
+    if(!deleting){typingElement.textContent=txt.substring(0,cIndex);if(cIndex<txt.length){cIndex++;setTimeout(typeEffect,100);}else{deleting=true;setTimeout(typeEffect,2000);} }
+    else{typingElement.textContent=txt.substring(0,cIndex);if(cIndex>0){cIndex--;setTimeout(typeEffect,50);}else{deleting=false;fIndex=(fIndex+1)%frasesHeader.length;setTimeout(typeEffect,500);} }
   }
   typeEffect();
 
