--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     font-size: 1.7rem;
     margin-bottom: 30px;
     display: inline-block;
-    background: rgba(0, 0, 0, 0.8); /* caixa preta semi-transparente */
+    background: #000; /* caixa preta sólida */
     padding: 10px 20px; /* espaço interno */
     border-radius: 8px; /* cantos arredondados */
   }
